// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fields-layout can mount "fieldset" fields layout 1`] = `
<div id="app">
	<div id="MOCKED_GRID">
		<fieldset class="SharpForm__fieldset">
			<div class="SharpModule__inner">
				<div class="SharpModule__header">
					<legend class="SharpModule__title">Fieldset</legend>
				</div>
				<div class="SharpModule__content">
					<div id="MOCKED_GRID">FIELD MOCK</div>
				</div>
			</div>
		</fieldset>
	</div>
</div>
`;

exports[`fields-layout can mount "hidden fieldset" fields layout 1`] = `
<div id="app">
	<div id="MOCKED_GRID">
		<fieldset class="SharpForm__fieldset" style="display: none;">
			<div class="SharpModule__inner">
				<div class="SharpModule__header">
					<legend class="SharpModule__title">Fieldset</legend>
				</div>
				<div class="SharpModule__content">
					<div id="MOCKED_GRID">FIELD MOCK</div>
				</div>
			</div>
		</fieldset>
	</div>
</div>
`;

exports[`fields-layout can mount fields layout 1`] = `
<div id="app">
	<div id="MOCKED_GRID">FIELD MOCK</div>
</div>
`;
